<resources>
    <string name="app_name">TidyTechTowns</string>
    <!--Welcome Page Strings-->
    <string name="welcome">Welcome to Tidy Tech Towns</string>
    <string name="codeError">That code is incorrect, please try again. If you need to contact
        someone about your community code, please click here</string>
    <string name="Signup">SignUp</string>
    <string name="signUpHeading">Register a Community</string>
    <string name="join">Join a Community</string>
    <string name="joinCom">To join a community, please enter the unique code</string>
    <string name="enterApp">Use independent of a Community</string>
    <string name="enter">Enter</string>
    <string name="JJjoin"> Join</string>
    <string name="title_activity_maps">Map</string>
    <string name="loginError">Invalid code. Please try again.</string>

    <!--Registration Page Strings-->
    <string name="regMe">Register</string>
    <string name="regHeading"> Register Your Community </string>
    <string name="comName"> <![CDATA[Community \nName]]></string>
    <string name="townName"> Town</string>
    <string name="county"> County</string>
    <string name="Registrar"> Registrar Details</string>
    <string name="fname"> <![CDATA[First \nname]]></string>
    <string name="sname"> <![CDATA[Second \nname]]></string>

    <!--ShowRandomCode Strings-->
    <string name="thankYou">Thank you for registering your Community</string>
    <string name="description">To have others join and contribute to your community, please
        distribute this unique community code. The other members of your community can use those
        unique string on the login page under "Join a Community"</string>
    <string name="yourRank"> Individual Rankings </string>
    <string name="commRank"> Community Rankings </string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Home</string>
    <string name="tab_text_2">Travel</string>

    <!--Events strings-->
    <string name="instruction">Tap date to show events</string>

    <!--Dialog strings-->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="reoprtHideTitle">Show/hide reports</string>
    <string name="reoprtTitle">What are you reporting?</string>
    <string name="yourScore">Your current score is:</string>
    <!--Weather strings-->
    <string name="comfort">Comfort Level</string>
    <string name="dummy"></string>
    <string name="wind">Speed:</string>
    <string name="windLab">Wind</string>
    <string name="windAng">Direction:</string>
    <string name="appT"><![CDATA[Apparent \n Temperature]]></string>
    <string name="humLab">Humidity:</string>
    <string name="slash">/</string>

    <string name="Close">Close</string>
    <string name="Open">Open</string>

    <string-array name="report">
        <item>Litter</item>
        <item>Dumping</item>
        <item>Graffiti</item>
        <item>Chemical spill</item>
    </string-array>
    <string name="title_activity_plogging">Map</string>

    <!--Carbon Calculator strings-->

    <!--Tab1 strings-->
    <string name="how_many"><![CDATA[People living\nin your house?]]></string>
    <string name="electricity">Electricity</string>
    <string name="heating">Heating (oil)</string>
    <string name="coal">Coal</string>
    <string name="LPG">LPG</string>
    <string name="propane">Propane</string>
    <string name="woord">Wood</string>
    <string name="total">Total CO2: %d</string>
    <string name="calculate">Calculate</string>

    <!--Tab Units-->
    <string name="elecU">kW/h</string>
    <string name="heatU">L</string>
    <string name="coalU">ton</string>
    <string name="money">&#8364;</string>
    <string name="distance">km</string>

    <!--Tab2 strings-->

    <string name="flights">Flights</string>
    <string name="flight_type">Flight type</string>
    <string name="vehicle_type">Vehicle type</string>
    <string name="fuel_type">Fuel type</string>

    <string name="trips">Trips</string>
    <string name="vehicle">Vehicle</string>
    <string name="milage">Milage</string>
    <string name="pt">Public Transport</string>
    <string name="bus">Bus</string>
    <string name="rail">Rail</string>
    <string name="tram">Luas/Tram</string>
    <string name="hint" />


    <!--Tab3 strings-->

    <string name="phone"><![CDATA[Phone \nExpenses]]></string>
    <string name="Fand"><![CDATA[Food and Drink \nExpenses]]></string>
    <string name="recreation"><![CDATA[Recreational \nExpenses]]></string>

    <!--PLogging info-->
    <string name="plogTitle">What is Plogging?</string>

    <!--Map Buttons-->
    <string name="addBin">Add Bin</string>
    <string name="report">Report Issue</string>
    <string name="showBin">Show Bins</string>
    <string name="goPlog">Go Plogging!</string>

</resources>
