<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/second_frag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tag="unique_tag"

  >

    <RelativeLayout
        android:id="@+id/firstContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bg_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:padding="5dp">

        <TextView
            android:id="@+id/flights"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/flights"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="188dp"
            android:layout_height="22dp"
            android:layout_below="@id/flights"
            android:layout_marginStart="32dp"
            android:text="@string/flight_type" />

        <Spinner
            android:id="@+id/flight_type"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/flights"
            android:layout_alignTop="@id/textView21"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="36dp"
            android:entries="@array/flights_types" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView21"
            android:layout_alignBaseline="@id/trips"
            android:layout_marginStart="32dp"
            android:text="@string/trips" />

        <EditText
            android:id="@+id/trips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView21"
            android:layout_alignEnd="@id/flight_type"
            android:ems="8"
            android:hint="@string/hint"
            android:inputType="number" />

        <TextView
            android:id="@+id/km1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/flight_type"
            android:layout_alignBaseline="@id/trips"
            android:layout_toRightOf="@id/trips"
            android:text="@string/distance"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/Vehicle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView20"
            android:layout_marginStart="32dp"
            android:layout_marginTop="15dp"
            android:text="@string/vehicle"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Vehicle"
            android:layout_alignBaseline="@id/vehicle_type"
            android:layout_marginStart="32dp"
            android:text="@string/vehicle_type" />

        <Spinner
            android:id="@+id/vehicle_type"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/Vehicle"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="36dp"
            android:entries="@array/vehicle_types" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView25"
            android:layout_alignBaseline="@id/fuel_type"
            android:layout_marginStart="32dp"
            android:text="@string/fuel_type" />

        <Spinner
            android:id="@+id/fuel_type"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/vehicle_type"
            android:layout_alignEnd="@id/vehicle_type"
            android:entries="@array/fuel_types" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView23"
            android:layout_alignBaseline="@id/milage"
            android:layout_marginStart="32dp"
            android:text="@string/milage" />

        <EditText
            android:id="@+id/milage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fuel_type"
            android:layout_alignEnd="@id/fuel_type"
            android:layout_marginBottom="8dp"
            android:ems="8"
            android:inputType="number" />

        <TextView
            android:id="@+id/km2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fuel_type"
            android:layout_alignBaseline="@id/milage"
            android:layout_toRightOf="@id/milage"
            android:text="@string/distance"
            android:textSize="20sp" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/secondContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bg_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstContainer"
        tools:padding="5dp">


        <TextView
            android:id="@+id/pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/pt"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pt"
            android:layout_alignBaseline="@id/bus"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/bus" />

        <EditText
            android:id="@+id/bus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pt"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="36dp"
            android:ems="8"
            android:hint="@string/hint"
            android:inputType="number" />

        <TextView
            android:id="@+id/km3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/bus"
            android:layout_marginStart="-36dp"
            android:layout_toEndOf="@+id/bus"
            android:text="@string/distance"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="37dp"
            android:layout_height="20dp"
            android:layout_below="@id/textView17"
            android:layout_alignBaseline="@id/rail"
            android:layout_marginStart="32dp"
            android:text="@string/rail" />

        <EditText
            android:id="@+id/rail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bus"
            android:layout_alignEnd="@id/bus"
            android:ems="8"
            android:hint="@string/hint"
            android:inputType="number" />

        <TextView
            android:id="@+id/km4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/km3"
            android:layout_alignBaseline="@id/rail"
            android:layout_toRightOf="@id/rail"
            android:text="@string/distance"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/luas"
            android:layout_alignEnd="@id/textView18"
            android:layout_marginStart="32dp"
            android:text="@string/tram" />

        <EditText
            android:id="@+id/luas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rail"
            android:layout_alignEnd="@id/rail"
            android:layout_marginBottom="8dp"
            android:ems="8"
            android:hint="@string/hint"
            android:inputType="number" />

        <TextView
            android:id="@+id/km5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/km4"
            android:layout_alignBaseline="@id/luas"
            android:layout_toRightOf="@id/luas"
            android:text="@string/distance"
            android:textSize="20sp" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/thirdContainer"
        android:layout_width="0dp"
        android:layout_height="66dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/bg_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondContainer">

        <TextView
            android:id="@+id/pls1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/calculate"
            android:text="@string/total" />

        <Button
            android:id="@+id/calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="22dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/calculate" />

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>